# atshield

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  compose.yaml  rumdl.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  handle.rs  main.rs  output.rs  util.rs
crates/cli/src/baseline/: mod.rs  record.rs  trust_key.rs  untrust_key.rs  update.rs
crates/cli/src/challenge/: mod.rs  new.rs  sign.rs
crates/cli/src/command/: handle.rs  mod.rs
crates/cli/src/command/baseline/: check.rs  mod.rs  record.rs  trust_key.rs  untrust_key.rs  update.rs
crates/cli/src/command/challenge/: mod.rs  verify.rs
crates/cli/src/command/op/: build.rs  encode.rs  mod.rs  sig.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: audit.rs  cid.rs  crypto.rs  delta.rs  did.rs  encoding.rs  endpoints.rs  error.rs  handle.rs  lib.rs  operation.rs  resolver.rs  test.rs
crates/edge/: Cargo.toml  Containerfile
crates/edge/src/: lib.rs  main.rs
