[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.0"
authors = ["Zan Baldwin <hello@zanbaldwin.com>"]
repository = "https://github.com/zanbaldwin/atshield"
rust-version = "1.96"

[workspace.dependencies]
atrium-crypto = "=0.1.3"
atshield-core = { path = "crates/core" }
base64 = "=0.22.1"
cid = "=0.11.3"
ecdsa = "=0.16.9"
getrandom = "=0.2.17"
k256 = "=0.13.3"
hex = "=0.4.3"
jiff = "=0.2.29"
multibase = "=0.9.2"
multihash-codetable = "=0.2.2"
p256 = "=0.13.2"
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "=0.6.4"
serde_json = "1"
thiserror = "2"
zeroize = "1"

[workspace.lints.rust]
missing_docs = "warn"
[workspace.lints.clippy]
indexing_slicing = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
