# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "atshield-core"
description = "Stateless primitives for ATProto PLC: audit-log verification, classification, and proof-of-possession"
license = "MIT OR Apache-2.0"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-utils = []

[dependencies]
atrium-crypto.workspace = true
base64.workspace = true
cid.workspace = true
ecdsa = { workspace = true, features = ["der"] }
getrandom.workspace = true
hex.workspace = true
jiff.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
multibase.workspace = true
multihash-codetable = { workspace = true, features = ["sha2"] }
p256 = { workspace = true, features = ["ecdsa"] }
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
